manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timetable
  namespace: trpfrog-timetable
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: trpfrog-timetable
